fix light/dark mode

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -2,7 +2,7 @@ h3 {
     margin-left: 10px;
 }
 
-#topBlogContainer {
+#topContainer {
     border-bottom: double var(--lBlack) 7px;
     margin: 0px;
     height: 15%;
